k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    app: my-nginx
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
