k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app
spec:
  routes:
    - match: HostRegexp(`my-app.com`)
      kind: Rule
      services:
        - name: my-app
          port: 80
      middlewares:
        - name: errors
